# geospatial-studio-pipelines

./: .gitignore  CODEOWNERS  README.md  dev.sh
components/inference-planner/: Dockerfile.template
components/postprocess-generic-single/: README.md  postprocess_generic_helper_functions.py  postprocess_generic_single.py
components/postprocess-generic-single/post_process/: pyproject.toml
components/postprocess-generic-single/post_process/post_process/: __init__.py  discovery.py  logging.py  post_process.py  registry.py  sdk.py
components/postprocess-generic-single/post_process/post_process/generic/: __init__.py  example_post_processing.py  im2poly_regularize.py
components/push_to_geoserver/: Dockerfile.template  README.md
components/run-inference/: Dockerfile.template  README.md
components/run-inference-vllm/: run-inference-vllm.py
components/template_process/: Dockerfile.template  deploy_template_process.yaml
components/terrakit_data_fetch/: Dockerfile.template  README.md
components/terratorch_inference/: Dockerfile.template  README.md
components/url-connector-single/: README.md
docs/notebooks/: registering_new_post_processing_step.ipynb  user_masking_local_testing.py
general_libraries/orchestrate_wrapper/: orchestrate_wrapper.py
pipeline-processor-image/: Dockerfile  Dockerfile.merged  Dockerfile.terratorch  Dockerfile.vllm  requirements.txt  start_vllm.sh
pipeline-processor-image/components/curated_upload/: claimed_curated_upload_v2.py
pipeline-processor-image/components/inference-planner/: README.md  (+3 more)
tools/gdal-base/: Dockerfile
(+35 files in other folders)
